# QSD

./: .gitmodules  README.md  UQSD_and_MED_05.ipynb  exp_uqsd_med.py  experiment_new.py  experiments.py  plot_results.py  process_results.py  pyproject.toml  rep_2003.py
flow/: build_circuits.py  experiments.py  interface.py  plots.py  problem_spec.py  sim.ipynb  solve_mix.py  solvers.py  test_similar_uqsd_plot_grok.py  verify_povm.py
notebooks/: search_param.ipynb  show_povm_circuit.ipynb
results_aria1_MED/: results.json
results_aria1_UQSD/: results.json
temp/: get_random_seeds.py  init_state.py  save_load_arr.py  test_scip_opt.py  test_scipy_opt_debug.py
tests/: test_crossqd_dpp.py
theo_succ_rates_2024-06-24/raw/: MED_theo_succ_20_0.0.csv  MED_theo_succ_20_0.1.csv  MED_theo_succ_20_0.2.csv  MED_theo_succ_20_0.3.csv  MED_theo_succ_20_0.4.csv  MED_theo_succ_20_0.5.csv  UQSD_theo_succ_20.csv  sqrt_x_20.csv
utils/: complex_heatmap.py  generate_exp_config.py  handy_states.py  inner_product.py  multiple_wigner.py  printing.py  prob_matrix.py  run_with_timeout.py  sic_expand.py  sic_fiducial_state.py  utils.py
